# Serenity-MusicBot

./: Cargo.toml  README.md
src/: config.rs  main.rs
src/commands/: deafen.rs  join.rs  leave.rs  mod.rs  mute.rs  ping.rs  play.rs  queue.rs  skip.rs  stop.rs  undeafen.rs  unmute.rs
src/handlers/: channel_duration_notifier.rs  mod.rs  song_end_notifier.rs  song_fader.rs  track_end_notifier.rs
src/utils/: events.rs  http_client.rs  mod.rs  utility.rs
